Grace/tests/gibbs/errors/t285.grace
// ERROR = P1018
catch {Exception.raise}
    case (.)
